(MINOR) Simpler configuration (#83)
Configuration v2
