# smart-switches/site/src/api/models/LayoutV4.ts
@@ -1,100 +1,0 @@
-/**
- * Smart Switches
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * OpenAPI spec version: 
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { Command } from '../models/Command';
-import { HttpFile } from '../http/http';
-
-export class LayoutV4 {
-    '_1'?: Command;
-    '_2'?: Command;
-    '_3'?: Command;
-    '_4'?: Command;
-    '_5'?: Command;
-    '_6'?: Command;
-    '_7'?: Command;
-    '_8'?: Command;
-    'off'?: Command;
-    'on'?: Command;
-
-    static readonly discriminator: string | undefined = undefined;
-
-    static readonly mapping: {[index: string]: string} | undefined = undefined;
-
-    static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
-        {
-            "name": "_1",
-            "baseName": "1",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "_2",
-            "baseName": "2",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "_3",
-            "baseName": "3",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "_4",
-            "baseName": "4",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "_5",
-            "baseName": "5",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "_6",
-            "baseName": "6",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "_7",
-            "baseName": "7",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "_8",
-            "baseName": "8",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "off",
-            "baseName": "off",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "on",
-            "baseName": "on",
-            "type": "Command",
-            "format": ""
-        }    ];
-
-    static getAttributeTypeMap() {
-        return LayoutV4.attributeTypeMap;
-    }
-
-    public constructor() {
-    }
-}
