# smart-switches/site/src/api/models/all.ts
@@ -4,12 +4,8 @@ export * from '../models/Device'
 export * from '../models/ErrorDetail'
 export * from '../models/ErrorModel'
 export * from '../models/Executable'
-export * from '../models/LayoutV4'
-export * from '../models/LayoutV5'
-export * from '../models/LayoutV6'
-export * from '../models/LayoutV7'
-export * from '../models/LayoutV9'
-export * from '../models/Layouts'
+export * from '../models/LayoutDefinition'
+export * from '../models/LayoutInstance'
 export * from '../models/ListBLEDevicesResponseBody'
 export * from '../models/ListExecutablesResponseBody'
 export * from '../models/PostPressRequestBody'
@@ -17,4 +13,3 @@ export * from '../models/StartBLEScanRequestBody'
 export * from '../models/StartBLEScanResponseBody'
 export * from '../models/StopBLEScanResponseBody'
 export * from '../models/Switch'
-export * from '../models/WheelRoutine'
