# smart-switches/site/src/api/types/ObjectParamAPI.ts
@@ -8,12 +8,8 @@ import { Device } from '../models/Device';
 import { ErrorDetail } from '../models/ErrorDetail';
 import { ErrorModel } from '../models/ErrorModel';
 import { Executable } from '../models/Executable';
-import { LayoutV4 } from '../models/LayoutV4';
-import { LayoutV5 } from '../models/LayoutV5';
-import { LayoutV6 } from '../models/LayoutV6';
-import { LayoutV7 } from '../models/LayoutV7';
-import { LayoutV9 } from '../models/LayoutV9';
-import { Layouts } from '../models/Layouts';
+import { LayoutDefinition } from '../models/LayoutDefinition';
+import { LayoutInstance } from '../models/LayoutInstance';
 import { ListBLEDevicesResponseBody } from '../models/ListBLEDevicesResponseBody';
 import { ListExecutablesResponseBody } from '../models/ListExecutablesResponseBody';
 import { PostPressRequestBody } from '../models/PostPressRequestBody';
@@ -21,12 +17,14 @@ import { StartBLEScanRequestBody } from '../models/StartBLEScanRequestBody';
 import { StartBLEScanResponseBody } from '../models/StartBLEScanResponseBody';
 import { StopBLEScanResponseBody } from '../models/StopBLEScanResponseBody';
 import { Switch } from '../models/Switch';
-import { WheelRoutine } from '../models/WheelRoutine';
 
 import { ObservableDefaultApi } from "./ObservableAPI";
 import { DefaultApiRequestFactory, DefaultApiResponseProcessor} from "../apis/DefaultApi";
 
 export interface DefaultApiGetConfigRequest {
+}
+
+export interface DefaultApiGetLayoutDefinitionsRequest {
 }
 
 export interface DefaultApiListBleDevicesRequest {
@@ -84,6 +82,24 @@ export class ObjectDefaultApi {
      */
     public getConfig(param: DefaultApiGetConfigRequest = {}, options?: ConfigurationOptions): Promise<Config> {
         return this.api.getConfig( options).toPromise();
+    }
+
+    /**
+     * Returns the definitions of all supported layout versions, including which buttons they support
+     * Get available layout definitions
+     * @param param the request object
+     */
+    public getLayoutDefinitionsWithHttpInfo(param: DefaultApiGetLayoutDefinitionsRequest = {}, options?: ConfigurationOptions): Promise<HttpInfo<{ [key: string]: LayoutDefinition; }>> {
+        return this.api.getLayoutDefinitionsWithHttpInfo( options).toPromise();
+    }
+
+    /**
+     * Returns the definitions of all supported layout versions, including which buttons they support
+     * Get available layout definitions
+     * @param param the request object
+     */
+    public getLayoutDefinitions(param: DefaultApiGetLayoutDefinitionsRequest = {}, options?: ConfigurationOptions): Promise<{ [key: string]: LayoutDefinition; }> {
+        return this.api.getLayoutDefinitions( options).toPromise();
     }
 
     /**
